added a bunch of books

--- a/books/index.html
+++ b/books/index.html
@@ -4,9 +4,141 @@
 <!--#include virtual="/includes/menu.inc" -->
 
 <div class="heading">Books about The GIMP</div>
-<div class="subtitle">Subtitle goes here</div>
+
+<div class="subtitle">The Artist Guide to the Gimp</div>
 <p>
-  Text goes here...
+  <img class="icon" src="the_artist_guide_to_the_gimp.png" alt="">
+  <strong>Author:</strong> Michael J. Hammel<br/>
+  <strong>Format:</strong> Paperback, 340pp.<br/>
+  <strong>ISBN:</strong> 1-578-31011-3<br/>
+  <strong>Publisher/Date:</strong> Specialized Systems Consultants, Incorporated/December 1998<br/>
+  <strong>Website:</strong><br/>
+  <br/>
+  <strong>Description:</strong> The Artists' Guide to the GIMP covers
+  all of the basics a new user needs to get started, from detailed
+  descriptions of Toolbox features to using selections to a complete
+  explanation of Layers and Channels. Chapters on color functions and
+  drawing and painting methods show how to make the most of this
+  wonderful alternative to similar applications for other
+  platforms. Several examples of plug-ins high resolution, four-color
+  glossy prints serve as tutorials and inspiration to any reader. Add
+  to these the extensive discussions on printing and scanning, and the
+  result is a text that will be an integral part of any graphic
+  artist's tool chest.
+</p>
+
+<div class="subtitle">Essential GIMP for Web Professionals</div>
+<p>
+  <img class="icon" src="essential_gimp_for_web_professionals.png" alt="">
+  <strong>Author:</strong> Michael J. Hammel<br/>
+  <strong>Format:</strong> Paperback, 376pp.<br/>
+  <strong>ISBN:</strong> 0-130-19114-0<br/>
+  <strong>Publisher/Date:</strong> Pearson Education/April 2001<br/>
+  <strong>Website:</strong><br/>
+  <br/>
+  <strong>Description:</strong>
+</p>
+
+<div class="subtitle">GIMP Essential Reference</div>
+<p>
+  <img class="icon" src="gimp_esential_reference.png" alt="">
+  <strong>Author:</strong> Alex Harford<br/>
+  <strong>Format:</strong> Paperback, 373pp.<br/>
+  <strong>ISBN:</strong> 0-735-70911-4<br/>
+  <strong>Publisher/Date:</strong> Pearson Education/November 1999<br/>
+  <strong>Website:</strong><br/>
+  <br/>
+  <strong>Description:</strong>
+</p>
+
+<div class="subtitle">The GIMP for Linux and Unix: Visual QuickStart Guide</div>
+<p>
+  <img class="icon" src="the_gimp_for_linux_and_unix:_visual_quickstart_guide.png" alt="">
+  <strong>Author:</strong> Phyllis Davies<br/>
+  <strong>Format:</strong> Paperback, 352pp.<br/>
+  <strong>ISBN:</strong> 0-201-70253-3<br/>
+  <strong>Publisher/Date:</strong> Peachpit Press/April 2000<br/>
+  <strong>Website:</strong><br/>
+  <br/>
+  <strong>Description:</strong>
+</p>
+
+<div class="subtitle">GIMP for Linux Bible</div>
+<p>
+  <img class="icon" src="gimp_for_linux_bible.png" alt="">
+  <strong>Authors:</strong> Stephanie Cottrell Bryant, Tillman Hodgson, Bryan Livingston<br/>
+  <strong>Format:</strong> Paperback, 728pp.<br/>
+  <strong>ISBN:</strong> 0-764-53398-3<br/>
+  <strong>Publisher/Date:</strong> International Data Goup Company/December 1999<br/>
+  <strong>Website:</strong><br/>
+  <br/>
+  <strong>Description:</strong>
+</p>
+
+<div class="subtitle">The GIMP Pocket Reference</div>
+<p>
+  <img class="icon" src="the_gimp_pocket_reference.png" alt="">
+  <strong>Author:</strong> Sven Neumann<br/>
+  <strong>Format:</strong> Paperback, 97pp.<br/>
+  <strong>ISBN:</strong> 1-565-92731-1<br/>
+  <strong>Publisher/Date:</strong> O'Reilly & Associates, Incorporated/August 2000<br/>
+  <strong>Website:</strong> <a href="http://www.oreilly.com/catalog/gimppr/">http://www.oreilly.com/catalog/gimppr/</a><br/>
+  <br/>
+  <strong>Description:</strong> The GIMP Pocket Reference explains the
+  numerous features of the GNU Image Manipulation Program - and is the
+  essential guide for designers working in a Linux/Unix
+  environment. This handy reference covers GIMP version 1.2. It
+  explains the function of every menu item and offers tips for
+  everyday use. The GIMP Pocket Reference is available in both
+  English, German, Dutch and French versions.
+</p>
+
+<div class="subtitle">GIMP - The Official Handbook</div>
+<p>
+  <img class="icon" src="gimp_the_official_handbook.png" alt="">
+  <strong>Authors:</strong> Olof S. Kylander, Karin Kylander<br/>
+  <strong>Format:</strong> Paperback, 895pp.<br/>
+  <strong>ISBN:</strong> 1-576-10520-2<br/>
+  <strong>Publisher/Date:</strong> Coriolis Value/November 1999<br/>
+  <strong>Website:</strong><br/>
+  <br/>
+  <strong>Description:</strong>
+</p>
+
+<div class="subtitle">Grokking the GIMP</div>
+<p>
+  <img class="icon" src="grokking_the_gimp.png" alt="">
+  <strong>Author:</strong> Carey Bunks<br/>
+  <strong>Format:</strong> Paperback, 352pp.<br/>
+  <strong>ISBN:</strong> 0-735-70924-6<br/>
+  <strong>Publisher/Date:</strong> Pearson Education/February 2000<br/>
+  <strong>Website:</strong> <a href="http://gimp-savvy.com/BOOK/index.html">http://gimp-savvy.com/BOOK/index.html</a><br/>
+  <br/>
+  <strong>Description:</strong>
+</p>
+
+<div class="subtitle">Guerrilla Guide to Great Graphics with the GIMP</div>
+<p>
+  <img class="icon" src="guerrilla_guide_to_great_graphics_with_the_gimp.png" alt="">
+  <strong>Author:</strong> David D. Busch<br/>
+  <strong>Format:</strong> Paperback, 400pp.<br/>
+  <strong>ISBN:</strong> 0-761-52407-X<br/>
+  <strong>Publisher/Date:</strong> Premier Press/January 2000<br/>
+  <strong>Website:</strong><br/>
+  <br/>
+  <strong>Description:</strong>
+</p>
+
+<div class="subtitle">Teach Yourself GIMP in 24 Hours</div>
+<p>
+  <img class="icon" src="teach_yourself_gimp_in_24_hours.png" alt="">
+  <strong>Authors:</strong> Joshua Pruitt, Ramona Pruitt<br/>
+  <strong>Format:</strong> Paperback, 360pp.<br/>
+  <strong>ISBN:</strong> 0-672-31509-2<br/>
+  <strong>Publisher/Date:</strong> Macmillan Computer Publishing/March 1999<br/>
+  <strong>Website:</strong><br/>
+  <br/>
+  <strong>Description:</strong>
 </p>
 
 <!--#include virtual="/includes/linkbar.inc" -->
