added description to Grokking the GIMP

--- a/books/index.html
+++ b/books/index.html
@@ -44,7 +44,20 @@
   <strong>Publisher/Date:</strong> Pearson Education/February 2000<br/>
   <strong>Website:</strong> <a href="http://gimp-savvy.com/BOOK/index.html">http://gimp-savvy.com/BOOK/index.html</a><br/>
   <br/>
-  <strong>Description:</strong>
+  <strong>Description:</strong> Grokking the GIMP is for the serious
+  user of the GNU Image Manipulation Program, a premiere digital image
+  editing and painting program. It covers the GIMP in depth, and
+  complex tasks are intuitively presented and explained using an
+  interactive approach. In addition to emphasizing the theory and core
+  concepts of image manipulation, Grokking the GIMP beautifully
+  illustrates the practical aspects of working with digital
+  images. This fully 4-color book presents nine major projects and a
+  collection of many smaller ones that illustrate the core and
+  advanced uses of this powerful open-source application. Numbered
+  steps and an abundance of color images walk the reader through
+  real-world examples of color correction, image enhancement, collage,
+  photo montage, rendering, and web-graphics creation. The entire book
+  is available online at the above mentioned website.
 </p>
 
 <div class="subtitle">GIMP - The Official Handbook</div>
