--- a/books/index.html
+++ b/books/index.html
@@ -91,7 +91,7 @@
   <strong>Format:</strong> Paperback, 340pp.<br/>
   <strong>ISBN:</strong> 1-578-31011-3<br/>
   <strong>Publisher/Date:</strong> Specialized Systems Consultants, Incorporated/December 1998<br/>
-  <strong>Website:</strong><br/>
+  <strong>Website:</strong> <a href="http://www.ssc.com">http://www.ssc.com</a><br/>
   <br/>
   <strong>Description:</strong> The Artists' Guide to the GIMP covers
   all of the basics a new user needs to get started, from detailed
