Modified ChangeLog. Fixed all the links in the Further Read for all the
Modified ChangeLog.
Fixed all the links in the Further Read for all the Photo Edit tutorials.

--- a/tutorials/Photo_Edit/ND_Filter/index.html
+++ b/tutorials/Photo_Edit/ND_Filter/index.html
@@ -180,6 +180,11 @@
   With a 2-directional digital nd filter (&amp; perspective correction) (right image).
 </p>
 
+<div class="subtitle">Further Reading</div>
+<ul>
+  <li><a href="http://www.fredmiranda.com/article_2/index.html">Fred Miranda's tutorial</a> using this same technique in Photoshop.</li>
+</ul>
+
 <p>
   The original tutorial can be found <a href="http://cs.uhh.hawaii.edu/~jeschke/photography/articles/gimp/NDFilter/">here</a>.
 </p>
