--- a/tutorials/Photo_Edit/Reducing_CCD_Noise/index.html
+++ b/tutorials/Photo_Edit/Reducing_CCD_Noise/index.html
@@ -90,6 +90,11 @@
   <img src="example2-after.jpg" alt=""/>
 </p>
 
+<div class="subtitle">Further Reading on Reducing CCD Noise</div>
+<ul>
+  <li><a href="http://www.2morrow.dk/75ppi/coolpix/actions/">Actions for Photoshop 6 for reducing CCD noise.</a></li>
+</ul>
+
 <p>
   The original tutorial can be found <a href="http://cs.uhh.hawaii.edu/~jeschke/photography/articles/gimp/ReducingCCDNoise/">here</a>.
 </p>
