--- a/tutorials/Photo_Edit/Sepia_Toning/index.html
+++ b/tutorials/Photo_Edit/Sepia_Toning/index.html
@@ -170,6 +170,13 @@
   For this particular image, I prefer the smoother tonality and darker contrast of the left-hand image.
 </p>
 
+<div class="subtitle">Further Reading on Sepia Toning</div>
+<ul>
+  <li>Doing this same process with Photoshop (<a href="http://www.retouchpro.com/tutorials/lum-mask-sepia.html">Part I</a>, 
+  <a href="http://www.retouchpro.com/tutorials/lum-mask-sepia2.html">Part II</a>)</li>
+  <li><a href="http://www.photo.net/photo/sepia/index">Stepwise Sepia Toning Using Adobe Photoshop</a>. This method, using Duotones and Tritones, seems to be quite popular.</li>
+</ul>
+
 <p>
   The original tutorial can be found <a href="http://cs.uhh.hawaii.edu/~jeschke/photography/articles/gimp/SepiaToning/">here</a>.
 </p>
