--- a/tutorials/Photo_Edit/Smart_Sharpening/index.html
+++ b/tutorials/Photo_Edit/Smart_Sharpening/index.html
@@ -334,6 +334,13 @@
   Right image: Standard unsharp mask (Amt=0.50)
 </p>
 
+<div class="subtitle">Further Reading</div>
+<ul>
+  <li><a href="http://www.creativepro.com/printerfriendly/story/11242.html">Almost Everything You Wanted to Know About Sharpening in Photoshop</a></li>
+  <li>Follow-up article to the above, <a href="http://www.creativepro.com/printerfriendly/story/12189.html">A Two-Pass Approach to Sharpening in Photoshop</a></li>
+  <li>Fred Miranda: <a href="http://www.fredmiranda.com/article_3/index.html">The Ultimate Sharpening Technique</a></li>
+</ul>
+
 <p>
   The original tutorial can be found <a href="http://ahi.uhh.hawaii.edu/~jeschke/photography/articles/gimp/SmartSharpening/">here</a>.
 </p>
