added a few descriptions and website links

--- a/books/index.html
+++ b/books/index.html
@@ -12,7 +12,7 @@
   <strong>Format:</strong> Paperback, 376pp.<br/>
   <strong>ISBN:</strong> 0-130-19114-0<br/>
   <strong>Publisher/Date:</strong> Pearson Education/April 2001<br/>
-  <strong>Website:</strong><br/>
+  <strong>Website:</strong> <a href="http://www.phptr.com/essential/gimp/">http://www.phptr.com/essential/gimp/</a><br/>
   <br/>
   <strong>Description:</strong>
 </p>
@@ -67,9 +67,10 @@
   <strong>Format:</strong> Paperback, 895pp.<br/>
   <strong>ISBN:</strong> 1-576-10520-2<br/>
   <strong>Publisher/Date:</strong> Coriolis Value/November 1999<br/>
-  <strong>Website:</strong><br/>
+  <strong>Website:</strong> <a href="http://manual.gimp.org">http://manual.gimp.org</a><br/>
   <br/>
-  <strong>Description:</strong>
+  <strong>Description:</strong> The entire book
+  is available online at the above mentioned website.
 </p>
 
 <div class="subtitle">GIMP Essential Reference</div>
@@ -81,7 +82,12 @@
   <strong>Publisher/Date:</strong> Pearson Education/November 1999<br/>
   <strong>Website:</strong><br/>
   <br/>
-  <strong>Description:</strong>
+  <strong>Description:</strong> Gimp Essential Reference will show users how
+  to quickly become familiar with the advanced user interface using a
+  table-heavy format that will allow users to find what they're
+  looking for quickly. Gimp Essential Reference is for users working
+  with the Gimp who know what they want to accomplish, but don't know
+  exactly how to do it.
 </p>
 
 <div class="subtitle">The Artist Guide to the Gimp</div>
