Modified ChangeLog. Add Eric Jeschke to the team of tutorial authors and I
Modified ChangeLog.
Add Eric Jeschke to the team of tutorial authors and I also tried to change the list to be more human readable.

--- a/team.html
+++ b/team.html
@@ -21,24 +21,25 @@
 </ul>
 <div class="subtitle">Tutorial Authors</div>
 <ul>
-  <li>Seth Burgess</li>
-  <li>Francisco Bustamante Hempe</li>
-  <li>Tuomas Kuosmanen</li>
-  <li>Jens T L</li>
-  <li>Ville Pätsi</li>
-  <li>Mel Boyce</li>
-  <li>Zach Beane</li>
-  <li>Carol Spears</li>
-  <li>Gautam N. Lad</li>
-  <li>Eric Kidd</li>
-  <li>Jakub Steiner</li>
-  <li>Marco (LM) Lamberto</li>
   <li>Adrian Likins</li>
-  <li>Simon Budig</li>
-  <li>Kevin Turner</li>
+  <li>Carol Spears</li>
   <li>Dov Grobgeld</li>
+  <li>Eric Kidd</li>
+  <li>Eric Jeschke</li>
+  <li>Francisco Bustamante Hempe</li>
+  <li>Gautam N. Lad</li>
+  <li>Jakub Steiner</li>
   <li>James Henstridge</li>
+  <li>Jens T L</li>
   <li>John Beppu</li>
+  <li>Kevin Turner</li>
+  <li>Marco (LM) Lamberto</li>
+  <li>Mel Boyce</li>
+  <li>Seth Burgess</li>
+  <li>Simon Budig</li>
+  <li>Tuomas Kuosmanen</li>
+  <li>Ville Pätsi</li>
+  <li>Zach Beane</li>
 </ul>
 
 <!--#include virtual="/includes/linkbar.inc" -->
