Modified ChangeLog. Made a few fixes in the html tags.
Modified ChangeLog.
Made a few fixes in the html tags.

--- a/tutorials/Basic_Scheme/index.html
+++ b/tutorials/Basic_Scheme/index.html
@@ -393,13 +393,13 @@ This procedure only affects regions within a selection if there is a selection a
 <th valign=top></th>
 <td valign=top>FLOAT</td>
 <td valign=top>width</td>
-<td valign=top>the width of the rectangle: width > 0</td>
+<td valign=top>the width of the rectangle: width &gt; 0</td>
 </tr>
 <tr>
 <th valign=top></th>
 <td valign=top>FLOAT</td>
 <td valign=top>height</td>
-<td valign=top>the height of the rectangle: width > 0</td>
+<td valign=top>the height of the rectangle: width &gt; 0</td>
 </tr>
 <tr>
 <th valign=top></th>
@@ -560,6 +560,7 @@ The blur is a gaussian blur with the specified feather radius.
               SF-IMAGE "Image" 0
               SF-DRAWABLE "Layer" 0)
 </div>
+
 <p>
   The original tutorial can be found <a href="http://imagic.weizmann.ac.il/~dov/gimp/scheme-tut.html">here</a>.
 </p>
