Modified ChangeLog. Add the Photo To Sketch tutorial to the Expert list.
Modified ChangeLog.
Add the Photo To Sketch tutorial to the Expert list.
Made the first port of the Photo To Sketch tutorial.

--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -88,6 +88,9 @@
   the curves dialog and other color options.
 </p>
 <p>
+  <a href="Photo_To_Sketch/">Photo To Sketch</a> Change your photo into a nice painting or sketch.
+</p>
+<p>
   <a href="Draw_A_Paint_Brush/">Draw A Paint Brush</a> Put it all together and work
   your GIMP like the masters do.
 </p>
