Modified ChangeLog. Forgot one image (weird mistake).
Modified ChangeLog.
Forgot one image (weird mistake).

--- a/tutorials/Photo_To_Sketch/index.html
+++ b/tutorials/Photo_To_Sketch/index.html
@@ -69,6 +69,9 @@
 </p>
 
 <div class="subtitle">8. L&amp;C dialog with set-up for the colouring trick</div>
+<p class="images">
+  <img src="colour_trick.png" alt=""/>
+</p>
 <p>
   images,original image &amp; colouring layer in overlay mode
 </p>
