Modified ChangeLog. Add Dave Neary to the tutorial authors list.
Modified ChangeLog.
Add Dave Neary to the tutorial authors list.

--- a/team.html
+++ b/team.html
@@ -23,6 +23,7 @@
 <ul>
   <li>Adrian Likins</li>
   <li>Carol Spears</li>
+  <li>Dave Neary</li>
   <li>Dov Grobgeld</li>
   <li>Eric Kidd</li>
   <li>Eric Jeschke</li>
