Modified ChangeLog. Add more help to the step 4 in photo to sketch
Modified ChangeLog.
Add more help to the step 4 in photo to sketch tutorial.

--- a/tutorials/Photo_To_Sketch/index.html
+++ b/tutorials/Photo_To_Sketch/index.html
@@ -39,7 +39,8 @@
 </p>
 <p>
   We only want the strong edges, otherwise it'll look crap. To get them, we eliminate the edges with small magnitude. 
-  The easiest way to do this is with the levels tool (like this)
+  The easiest way to do this is with the levels tool. We set the curve type to free (which allows discontinuities) and then for 
+  the bottom 3/4 of the curve (or thereabouts) to 0. Just drag the mouse/pen along teh bottom of the curves tool.
 </p>
 
 <div class="subtitle">5. Image after the highpass</div>
