Modified ChangeLog. Changed the / to -> and also fixed the paths for the
Modified ChangeLog.
Changed the / to -> and also fixed the paths for the filters.

--- a/tutorials/Anti-Aliased_Treshold/index.html
+++ b/tutorials/Anti-Aliased_Treshold/index.html
@@ -18,7 +18,7 @@
 </p>
 <p>
   On the left you we see the original image that is about to be thresholded, and on the right side we see the result. The default settings
-  for the Threshold plug-in were used (<span class="filter">&lt;Image&gt;/Colors/Threshold</span>). The resulting image is very blocky and aliased.
+  for the Threshold plug-in were used (<span class="filter">&lt;Image&gt;Image-&gt;Colors-&gt;Threshold</span>). The resulting image is very blocky and aliased.
 </p>
 
 <div class="subtitle">The Curves Trick</div>
@@ -30,8 +30,8 @@
   First duplicate the image layer by going to the layers dialog, making sure the image layer is selected, and clicking the duplicate button
   (fourth from the left). We can use the original layer for some color tricks later. Now the next thing is to desaturate the image 
   (Image|Colors|Desaturate). This way the colors wont interfere with the fake thresholding. When the layer is grayscale, select the curves
-  plug-in (<span class="filter">&lt;Image&gt;/Colors/Curves</span>). Now we can play with the value "channel". The image on the left displays the settings used for the example
-  image. The space between the two dots determines how much aa the
+  plug-in (<span class="filter">&lt;Image&gt;Image-&gt;Colors-&gt;Curves</span>). Now we can play with the value "channel". 
+  The image on the left displays the settings used for the example image. The space between the two dots determines how much aa the
   resulting image will have. The wider the gap, the more grayscale values it will have, and vice versa. The resulting image can be seen on 
   the right.
 </p>
