added missing descriptions

--- a/books/index.html
+++ b/books/index.html
@@ -14,7 +14,13 @@
   <strong>Publisher/Date:</strong> Pearson Education/April 2001<br/>
   <strong>Website:</strong> <a href="http://www.phptr.com/essential/gimp/">http://www.phptr.com/essential/gimp/</a><br/>
   <br/>
-  <strong>Description:</strong>
+  <strong>Description:</strong> This concise, example-rich guide shows
+  Web professionals exactly how to create high-quality graphics with
+  the GIMP. It delivers no-nonsense, practical coverage based on
+  real-world projects you can see and download from the above
+  mentioned web site. Master layers, selections and masks, text, color
+  management, drawing, painting, image maps, animation, working from
+  scans, using effects and rendering filters - even scripting.
 </p>
 
 <div class="subtitle">The GIMP Pocket Reference</div>
@@ -69,8 +75,24 @@
   <strong>Publisher/Date:</strong> Coriolis Value/November 1999<br/>
   <strong>Website:</strong> <a href="http://manual.gimp.org">http://manual.gimp.org</a><br/>
   <br/>
-  <strong>Description:</strong> The entire book
-  is available online at the above mentioned website.
+  <strong>Description:</strong> Comprehensively covers the program by
+  teaching readers all aspects ranging from installing, to scripting,
+  to working faster and more efficiently through shortcuts. Thoroughly
+  covers one of the most powerful aspects of GIMP %G—%@ filters,
+  including how to create images invoking Cubism, Van Gogh, embossing,
+  warping, rippling, glass tile, and fractals. While this book does
+  not teach readers how to be artists, it offers plenty of examples to
+  inspire new ideas and grab on to the power and versatility of the
+  application. Gimp: The Official Handbook is written by two Gimp
+  experts and is the most comprehensive source of information
+  available on this freely distributed image-manipulation program for
+  the Open Source community. The only book to teach the entire
+  program, including all built-in filters and third-party
+  plug-ins. Beats the competition by teaching the program from cover
+  to cover. Other books gloss over key features and focus on learning
+  the program quickly, or are theoretical and provide no practical
+  information on the product.The entire book is available online at
+  the above mentioned website.
 </p>
 
 <div class="subtitle">GIMP Essential Reference</div>
@@ -80,7 +102,7 @@
   <strong>Format:</strong> Paperback, 373pp.<br/>
   <strong>ISBN:</strong> 0-735-70911-4<br/>
   <strong>Publisher/Date:</strong> Pearson Education/November 1999<br/>
-  <strong>Website:</strong><br/>
+  <strong>Website:</strong> N/A<br/>
   <br/>
   <strong>Description:</strong> Gimp Essential Reference will show users how
   to quickly become familiar with the advanced user interface using a
