--- a/books/index.html
+++ b/books/index.html
@@ -78,7 +78,7 @@
   <strong>Description:</strong> Comprehensively covers the program by
   teaching readers all aspects ranging from installing, to scripting,
   to working faster and more efficiently through shortcuts. Thoroughly
-  covers one of the most powerful aspects of GIMP %G—%@ filters,
+  covers one of the most powerful aspects of GIMP filters,
   including how to create images invoking Cubism, Van Gogh, embossing,
   warping, rippling, glass tile, and fractals. While this book does
   not teach readers how to be artists, it offers plenty of examples to
